<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WeatherApplication</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>


    <string name="btn_ok">Ok</string>
    <string name="btn_cancel">Cancel</string>
    <string name="tv_weather_items"><b>Weather Items</b></string>
    <string name="tv_default_city">Default City</string>
    <string name="tv_min_temp">0</string>
    <string name="tv_max_Temp">100</string>

</resources>
