<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:layout_weight="100">

    <TextView
        android:id="@+id/tv_city_name"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_weight="50"
        android:gravity="center_vertical"
        android:text="@string/tv_default_city"/>

    <TextView
        android:id="@+id/tv_min_temp"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/tv_min_temp"
        android:gravity="center_vertical"
        android:layout_weight="25"/>

    <TextView
        android:id="@+id/tv_max_temp"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:text="@string/tv_max_Temp"
        android:layout_weight="25"/>

</LinearLayout>