<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/et_city"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="16dp"/>

    <TextView
        android:id="@+id/tv_items"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/tv_weather_items"
        android:textSize="24sp"
        android:background="@color/blue"
        android:textColor="@color/white"/>

    <ListView
        android:id="@+id/lv_cities"
        android:layout_width="match_parent"
        android:layout_height="300dp"/>

    <LinearLayout
        android:id="@+id/ll_buttons"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:text="@string/btn_ok"/>

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:text="@string/btn_cancel"/>

    </LinearLayout>

</LinearLayout>